--- a/tasks/ssh.yml
+++ b/tasks/ssh.yml
@@ -1,23 +1,24 @@
 ---
+
 - name: Ensure ~/.ssh exists
   file:
     path: "{{ ansible_env.HOME }}/.ssh"
     state: directory
     mode: 0700
 
-# - name: Ensure ~/.ssh/known_hosts exists
-#   file:
-#     path: "{{ ansible_env.HOME }}/.ssh/known_hosts"
-#     state: touch
-#     mode: 0644
-#   changed_when: false
-#
-# - name: Add hosts to known_hosts
-#   known_hosts:
-#     path: "{{ ansible_env.HOME }}/.ssh/known_hosts"
-#     name: "{{ item.host }}"
-#     key: "{{ item.key }}"
-#   with_items: "{{ ssh_known_hosts }}"
+- name: Ensure ~/.ssh/known_hosts exists
+  file:
+    path: "{{ ansible_env.HOME }}/.ssh/known_hosts"
+    state: touch
+    mode: 0644
+  changed_when: false
+
+- name: Add hosts to known_hosts
+  known_hosts:
+    path: "{{ ansible_env.HOME }}/.ssh/known_hosts"
+    name: "{{ item.host }}"
+    key: "{{ item.key }}"
+  with_items: "{{ ssh_known_hosts }}"
 
 - name: Generate ssh keys
   user:
@@ -26,6 +27,7 @@
     ssh_key_bits: 4096
     ssh_key_passphrase: "{{item.passphrase}}"
     ssh_key_file: ".ssh/{{item.name}}"
+    ssh_key_type: "{{ item.type | default('rsa')}}"
   with_items: "{{ ssh_keys }}"
 
 - name: Add {{item.host}} ssh config into config file
