--- a/main.yml
+++ b/main.yml
@@ -1,10 +1,6 @@
 ---
 - name: macOS Setup
-  hosts: all
-  connection: local
-#   gather_facts: yes
-#   vars:
-#     ansible_python_interpreter: /usr/local/bin/python2
+  hosts: localhost
 
   vars_files:
     - default.config.yml
@@ -13,7 +9,7 @@
     - include_vars: "{{ item }}"
       with_fileglob:
         - "{{ playbook_dir }}/config.yml"
-      tags: ['always']
+      tags: ["always"]
 
     - block:
       - name: Verify Ansible version.
@@ -30,39 +26,39 @@
         assert:
           that: "ansible_distribution_version is version_compare('10.10', '>=')"
           msg: "The target system must be running macOS 10.10 or higher to use this version of Macsible."
-      tags: ['always']
+      tags: ["always"]
 
   roles:
     - role: geerlingguy.homebrew
-      tags: ['homebrew']
+      tags: ["homebrew"]
     - role: geerlingguy.dotfiles
       when: configure_dotfiles
-      tags: ['dotfiles']
+      tags: ["dotfiles"]
     - role: geerlingguy.mas
       when: mas_installed_apps
-      tags: ['mas']
+      tags: ["mas"]
 
   tasks:
     - include_tasks: tasks/ansible-setup.yml
 
     - include_tasks: tasks/terminal.yml
       when: configure_terminal
-      tags: ['terminal']
+      tags: ["terminal"]
 
     - include_tasks: tasks/osx.yml
       when: configure_osx
-      tags: ['osx']
+      tags: ["osx"]
 
     - include_tasks: tasks/extra-packages.yml
-      tags: ['extra-packages']
+      tags: ["extra-packages"]
 
     - include_tasks: tasks/ssh.yml
       when: configure_ssh
-      tags: ['ssh']
+      tags: ["ssh"]
 
     - include_tasks: tasks/projects.yml
       when: configure_projects and configure_ssh
-      tags: ['projects']
+      tags: ["projects"]
 
     - name: Run configured post-provision ansible task files.
       include_tasks: "{{ outer_item }}"
