--- a/tasks/projects.yml
+++ b/tasks/projects.yml
@@ -5,17 +5,54 @@
     state: directory
     follow: yes
 
-- name: Clone projects repos
+# OSS projects
+
+- name: Clone OSS project repos
   git:
-    repo: "{{ item.repo_https }}"
-    dest: ~/Developer/{{ item.dest }}
+    repo: "{{ item.repo }}"
+    dest: ~/Developer/oss/{{ item.dest }}
     accept_hostkey: yes
     version: master
-  with_items: "{{ projects }}"
+  with_items: "{{ projects_oss }}"
 
-- name: Set git remote URL to SSH
+  - name: Set git remote URL to SSH on oss projects
+    shell: git remote set-url origin {{ item.repo_ssh }}
+    with_items: "{{ projects_oss }}"
+    args:
+      chdir: "~/Developer/client/{{ item.dest }}"
+      warn: false
+
+# Internal projects
+
+- name: Clone internal project repos
+  git:
+    repo: "{{ item.repo }}"
+    dest: ~/Developer/internal/{{ item.dest }}
+    accept_hostkey: yes
+    version: master
+  with_items: "{{ projects_internal }}"
+
+  - name: Set git remote URL to SSH on internal projects
+    shell: git remote set-url origin {{ item.repo_ssh }}
+    with_items: "{{ projects_internal }}"
+    args:
+      chdir: "~/Developer/client/{{ item.dest }}"
+      warn: false
+
+# Client projects
+
+- name: Clone client project repos
+  git:
+    repo: "{{ item.repo }}"
+    dest: ~/Developer/client/{{ item.dest }}
+    accept_hostkey: yes
+    version: master
+  with_items: "{{ projects_client }}"
+
+- name: Set git remote URL to SSH  on client projects
   shell: git remote set-url origin {{ item.repo_ssh }}
-  with_items: "{{ projects }}"
+  with_items: "{{ projects_client }}"
   args:
-    chdir: "~/Developer/{{ item.dest }}"
+    chdir: "~/Developer/client/{{ item.dest }}"
     warn: false
+
