--- a/main.yml
+++ b/main.yml
@@ -39,7 +39,7 @@
       tags: ["mas"]
 
   tasks:
-    - include_tasks: tasks/ansible-setup.yml
+    # - include_tasks: tasks/ansible-setup.yml
 
     - include_tasks: tasks/terminal.yml
       when: configure_terminal
