--- a/tasks/terminal.yml
+++ b/tasks/terminal.yml
@@ -1,11 +1,8 @@
 ---
 - name: Installing zsh
   homebrew:
-    name: "{{ item }}"
+    name: ['zsh', 'zsh-completions']
     state: present
-  with_items:
-    - zsh
-    - zsh-completions
 
 - name: Install oh-my-zsh
   shell: sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
