--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,16 +19,19 @@ jobs:
       #     command: pip install pexpect -U --quiet
       - run:
           name: Install dependencies
-          command: ansible-galaxy install -r requirements.yml --force
+          command: ansible-galaxy install -r custom/requirements.yml --force
+      - run:
+          name: Create config.local file
+          command: touch custom/config.local.yml
       - run:
           name: Checking the role/playbook's syntax
-          command: ansible-playbook main.yml --syntax-check
-      - run:
-          name: Copy test config.yml into place.
-          command: cp tests/config.yml config.yml
+          command: ansible-playbook custom/mac.yml --syntax-check
+      # - run:
+      #     name: Copy test config.yml into place.
+      #     command: cp tests/config.yml config.yml
       - run:
           name: Run playbook
-          command: ansible-playbook main.yml --skip-tags "mas,no_ci"
+          command: ansible-playbook custom/mac.yml --skip-tags "mas,no_ci"
       # Test the playbook's idempotence.
       # - run: idempotence=$(mktemp)
       # - run: ansible-playbook --extra-vars '{"configure_terminal":"false"}' main.yml --skip-tags "mas" | tee -a ${idempotence}
