--- a/custom/mac--first.yml
+++ b/custom/mac--first.yml
@@ -7,15 +7,12 @@
     - config.local.yml
 
   roles:
-
-    - { role: macos, tags: "macos" }
+    # - { role: macos, tags: "macos" }
     - { role: ssh, tags: "ssh" }
-    - { role: quick-look-plugins, tags: ["quick_look_plugins"] }
-    - { role: danbohea.atom, tags: ["atom","no_ci"] }
-    - { role: danbohea.macos-spelling, tags: "spelling" }
-    - { role: iterm2, tags: "iterm2" }
-    - { cask_app_name: "bitwarden", tags: "bitwarden", role: danbohea.cask-app }
-    - { cask_app_name: "alfred", tags: ["alfred","sudo"], role: danbohea.cask-app }
-    - { cask_app_name: "firefox", tags: "firefox", role: danbohea.cask-app }
-    - { cask_app_name: "dropbox", tags: "dropbox", role: danbohea.cask-app }
-    - { cask_app_name: "bettertouchtool", tags: "bettertouchtool", role: danbohea.cask-app }
+    # - { role: quick-look-plugins, tags: ["quick_look_plugins"] }
+    # - { role: danbohea.atom, tags: ["atom","no_ci"] }
+    # - { cask_app_name: "bitwarden", tags: "bitwarden", role: danbohea.cask-app }
+    # - { cask_app_name: "alfred", tags: ["alfred","sudo"], role: danbohea.cask-app }
+    # - { cask_app_name: "firefox", tags: "firefox", role: danbohea.cask-app }
+    # - { cask_app_name: "dropbox", tags: "dropbox", role: danbohea.cask-app }
+    # - { cask_app_name: "bettertouchtool", tags: "bettertouchtool", role: danbohea.cask-app }
