--- a/custom/roles/internal/macos/tasks/trackpad_mouse.yml
+++ b/custom/roles/internal/macos/tasks/trackpad_mouse.yml
@@ -24,7 +24,7 @@
     - killall
 
 - name: Set scroll direction
-  command: defaults write -g com.apple.swipescrolldirection -bool FALSE
+  command: defaults write -g com.apple.swipescrolldirection -bool TRUE
   notify:
     - killall
 
