--- a/custom/roles/internal/macos/tasks/main.yml
+++ b/custom/roles/internal/macos/tasks/main.yml
@@ -9,6 +9,7 @@
 # - https://github.com/ansible/ansible/pull/19899
 
 - import_tasks: activity_monitor.yml
+- import_tasks: dock.yml
 - import_tasks: finder.yml
 - import_tasks: general_ui_ux.yml
 - import_tasks: mission_control.yml
@@ -16,6 +17,7 @@
 - import_tasks: screen.yml
 - import_tasks: ssd.yml
 - import_tasks: spotlight.yml
+- import_tasks: terminal.yml
 - import_tasks: textedit.yml
 - import_tasks: time_machine.yml
 - import_tasks: trackpad_mouse.yml
