--- a/custom/roles/internal/macos/tasks/safari_webkit.yml
+++ b/custom/roles/internal/macos/tasks/safari_webkit.yml
@@ -7,15 +7,17 @@
     type: bool
     value: "{{ item.value }}"
   with_items:
-    - { name: "Don't send search queries to Apple", key: "UniversalSearchEnabled", value: "false"}
-    - { name: "Don't send search queries to Apple", key: "UniversalSearchEnabled", value: "true"}
-    - { name: "Show the full URL in the address bar (note: this still hides the scheme)", key: "ShowFullURLInSmartSearchField", value: "true"}
-    - { name: "Prevent Safari from opening ‘safe' files automatically after downloading", key: "AutoOpenSafeDownloads", value: "false"}
-    - { name: "Allow hitting the Backspace key to go to the previous page in history", key: "com.apple.Safari.ContentPageGroupIdentifier.WebKit2BackspaceKeyNavigationEnabled", value: "true"}
-    - { name: "Hide Safari's bookmarks bar by default", key: "ShowFavoritesBar", value: "false"}
-    - { name: "Hide Safari's sidebar in Top Sites", key: "ShowSidebarInTopSites", value: "false"}
-    - { name: "Enable Safari's debug menu", key: "IncludeInternalDebugMenu", value: "true"}
-    - { name: "Make Safari's search banners default to Contains instead of Starts With", key: "FindOnPageMatchesWordStartsOnly", value: "false"}
+    - { name: "Don't send search queries to Apple (1/2)", key: "UniversalSearchEnabled", value: "false" }
+    - { name: "Don't send search queries to Apple (2/2)", key: "SuppressSearchSuggestions", value: "true" }
+    - { name: "Show the full URL in the address bar (note: this still hides the scheme)", key: "ShowFullURLInSmartSearchField", value: "true" }
+    - { name: "Prevent Safari from opening 'safe' files automatically after downloading", key: "AutoOpenSafeDownloads", value: "false" }
+    - { name: "Allow hitting the Backspace key to go to the previous page in history", key: "com.apple.Safari.ContentPageGroupIdentifier.WebKit2BackspaceKeyNavigationEnabled", value: "true" }
+    - { name: "Hide Safari's bookmarks bar by default", key: "ShowFavoritesBar", value: "false" }
+    - { name: "Hide Safari's sidebar in Top Sites", key: "ShowSidebarInTopSites", value: "false" }
+    - { name: "Enable Safari's debug menu", key: "IncludeInternalDebugMenu", value: "true" }
+    - { name: "Make Safari's search banners default to Contains instead of Starts With", key: "FindOnPageMatchesWordStartsOnly", value: "false" }
+    - { name: "Open windows from last session", key: "AlwaysRestoreSessionAtLaunch", value: "true" }
+    - { name: "Show Safari's status bar", key: "ShowOverlayStatusBar", value: "true" }
     - { name: "Enable the Develop menu and the Web Inspector in Safari (1)", key: "IncludeDevelopMenu", value: "true"}
     - { name: "Enable the Develop menu and the Web Inspector in Safari (2)", key: "WebKitDeveloperExtrasEnabledPreferenceKey", value: "true"}
     - { name: "Enable the Develop menu and the Web Inspector in Safari (3)", key: "com.apple.Safari.ContentPageGroupIdentifier.WebKit2DeveloperExtrasEnabled", value: "true"}
