--- a/custom/mac--first.yml
+++ b/custom/mac--first.yml
@@ -9,7 +9,7 @@
   roles:
     - { role: macos, tags: "macos" }
     - { role: ssh, tags: "ssh" }
-    # - { role: quick-look-plugins, tags: ["quick_look_plugins"] }
+    - { role: quick-look-plugins, tags: ["quick_look_plugins"] }
     # - { role: danbohea.atom, tags: ["atom","no_ci"] }
     # - { cask_app_name: "bitwarden", tags: "bitwarden", role: danbohea.cask-app }
     # - { cask_app_name: "alfred", tags: ["alfred","sudo"], role: danbohea.cask-app }
