Update and enable transmission role

--- a/custom/mac.yml
+++ b/custom/mac.yml
@@ -18,9 +18,9 @@
 - import_playbook: mac--projects.yml
   tags: ["mac__projects", "no_ci"]
 
-# # Remaining setup.
-# - import_playbook: mac--remaining.yml
-#   tags: ["mac__remaining", "no_ci"]
+# Remaining setup.
+- import_playbook: mac--remaining.yml
+  tags: ["mac__remaining", "no_ci"]
 
 # # Setup that really must be run last.
 # - import_playbook: mac--last.yml
