updated terminal role

--- a/custom/mac.yml
+++ b/custom/mac.yml
@@ -20,7 +20,7 @@
 
 # Remaining setup.
 - import_playbook: mac--remaining.yml
-  tags: ["mac__remaining"]
+  tags: ["mac__remaining", "no_ci"]
 
 # # Setup that really must be run last.
 # - import_playbook: mac--last.yml
