--- a/custom/mac--first.yml
+++ b/custom/mac--first.yml
@@ -9,9 +9,11 @@
   roles:
     - { role: macos, tags: "macos" }
     - { role: ssh, tags: "ssh" }
+    - { role: terminal, tags: ["terminal"] }
     - { role: quick-look-plugins, tags: ["quick_look_plugins"] }
     # - { role: danbohea.atom, tags: ["atom","no_ci"] }
   
+  # TODO CHECK THIS
   tasks:
     - name: "Installing Cask App {{ item.name }}"
       homebrew_cask:
