--- a/custom/mac--first.yml
+++ b/custom/mac--first.yml
@@ -19,7 +19,7 @@
       homebrew_cask:
         name:
           - bitwarden
-          - firefox
+          - google-chrome
           - dropbox
         state: present
         greedy: True
