--- a/custom/requirements.yml
+++ b/custom/requirements.yml
@@ -1,5 +1,3 @@
 ---
-- src: geerlingguy.homebrew
-  version: 2.9.0
-- src: geerlingguy.mas
-  varsion: 1.2.0
+- src: danbohea.homebrew
+  version: 2.0.0
