--- a/custom/mac--first.yml
+++ b/custom/mac--first.yml
@@ -7,18 +7,18 @@
     - config.local.yml
 
   roles:
-    # - { role: macos, tags: "macos" }
-    # - { role: ssh, tags: "ssh" }
+    - { role: macos, tags: "macos" }
+    - { role: ssh, tags: ["ssh","no_ci"] }
     - { role: terminal, tags: ["terminal"] }
-    # - { role: quick-look-plugins, tags: ["quick_look_plugins"] }
+    - { role: quick-look-plugins, tags: ["quick_look_plugins"] }
     # - { role: geerlingguy.mas, tags: ["mas","no_ci"] }
   
   # TODO CHECK THIS
-  # tasks:
-  #   - name: "Installing Cask App {{ item.name }}"
-  #     homebrew_cask:
-  #       name:
-  #         - google-chrome
-  #         - dropbox
-  #       state: present
-  #       greedy: True
+  tasks:
+    - name: "Installing Cask App {{ item }}"
+      homebrew_cask:
+        name:
+          - google-chrome
+          - dropbox
+        state: present
+        # greedy: True
