--- a/custom/config.yml
+++ b/custom/config.yml
@@ -14,26 +14,23 @@ ssh_keys: []
   #   passphrase: ""
   #   type: ed25519
 
-# Mac App Store
+# Projects
 # --------------------------------------------------------------------------
-# See `geerlingguy.mas` role documentation for usage instructions.
-mas_installed_apps:
-  - { name: "1Password 7", id: 1333542190 }
-  # - { name: "Affinity Designer", id: 824171161 }
-  # - { name: "Affinity Photo" id: 824183456 }
-  - { name: "Agenda", id: 1287445660 }
-  - { name: "Keynote", id: 409183694 }
-  - { name: "Magnet", id: 441258766 }
-  - { name: "Money", id: 1185488696 }
-  - { name: "Numbers", id: 409203825 }
-  - { name: "Pages", id: 409201541 }
-  # # - { name: "Pixelmator Pro", id: 1289583905 }
-  # # - { name: "Pixelmator", id: 407963104 }
-  - { name: "Reeder", id: 880001334 }
-  - { name: "Slack", id: 803453959 }
-  - { name: "Spark", id: 1176895641 }
-  - { name: "The Unarchiver", id: 425424353 }
-  - { name: "Xcode", id: 497799835 }
+projects_oss:
+  # - dest: "oss-repo"
+  #   repo_https: "https://{{ githubuser | urlencode }}:{{ githubpassword }}@github.com/private-repo.git"
+  #   repo_ssh: "git@github.com:githubuser/private-repo.git"
+  - { dest: "macOS-ansible", repo: "https://github.com/gperdomor/macOS-ansible.git", repo_ssh: "git@github.com:gperdomor/macOS-ansible.git" }
+projects_internal:
+  # - dest: "private-repo"
+  #   repo_https: "https://{{ githubuser | urlencode }}:{{ githubpassword }}@github.com/private-repo.git"
+  #   repo_ssh: "git@github.com:githubuser/private-repo.git"
+  - { dest: "macOS-ansible", repo: "https://github.com/gperdomor/macOS-ansible.git", repo_ssh: "git@github.com:gperdomor/macOS-ansible.git" }
+projects_client:
+  # - dest: "client-repo"
+  #   repo_https: "https://{{ githubuser | urlencode }}:{{ githubpassword }}@github.com/private-repo.git"
+  #   repo_ssh: "git@github.com:githubuser/private-repo.git"
+  - { dest: "macOS-ansible", repo: "https://github.com/gperdomor/macOS-ansible.git", repo_ssh: "git@github.com:gperdomor/macOS-ansible.git" }
 
 homebrew_taps:
   - homebrew/core
@@ -112,7 +109,7 @@ atom_packages:
 
 # VS Code Packages
 # --------------------------------------------------------------------------
-vscode_packages:
+vscode_extensions:
   # - { name: "Angular Console", id: "nrwl.angular-console" }
   # - { name: "Angular Languiase Service", id: "Angular.ng-template" }
   # - { name: "Copilot", id: "Metatype.copilot-vscode" }
@@ -147,5 +144,3 @@ vscode_packages:
 #   - /Applications/System Preferences.app
 #   - /Applications/xScope.app
 #   - /Applications/Tower.app
-
-homebrew_clear_cache: true
