--- a/custom/mac--remaining.yml
+++ b/custom/mac--remaining.yml
@@ -8,19 +8,47 @@
 
   roles:
     - { role: transmission, tags: "transmission" }
+    - role: mas
+      tags: ["mas", "no_ci"]
+      mas_installed_apps:
+        # - { name: "Affinity Designer", id: 824171161 }
+        # - { name: "Affinity Photo" id: 824183456 }
+        - { name: "Agenda", id: 1287445660 }
+        - { name: "Money", id: 1185488696 }
+        # - { name: "Pixelmator Pro", id: 1289583905 }
+        # - { name: "Pixelmator", id: 407963104 }
+        - { name: "The Unarchiver", id: 425424353 }
 
   tasks:
-    - name: Install homebrew cask packages
+    - name: "Installing Cask App {{ item }}"
       homebrew_cask:
         state: present
         name:
-          - cakebrew
-          - daisydisk
-          - docker 
+          # - cakebrew
+          # - cleanmymac
+          # - daisydisk
+          - docker
+          - dockstation
+          - duet
+          - firefox
+          # - gemini
           - hazel
+          - iina
+          - insomnia
+          - kitematic
+          # - knuff
           - malwarebytes
-          - name-mangler
-          - opera 
+          - minikube
+          # - name-mangler
+          # - navicat-premium
+          - ngrok
+          - opera
+          # - paw
+          # - pgadmin4
+          - postman
+          - skype
+          # - the-unarchiver # Installed using MAS role
+          # - transmission # Installed using custom role
           - vlc
 
     - name: Install homebrew packages
