--- a/custom/mac.yml
+++ b/custom/mac.yml
@@ -10,18 +10,18 @@
 - import_playbook: mac--day-to-day.yml
   tags: "mac__day_to_day"
 
-# Essential dev.
-# - import_playbook: mac--dev.yml
-#   tags: "mac__dev"
+Essential dev.
+- import_playbook: mac--dev.yml
+  tags: "mac__dev"
 
 # Project work.
 - import_playbook: mac--projects.yml
   tags: ["mac__projects", "no_ci"]
 
-# # Remaining setup.
-# - import_playbook: mac--remaining.yml
-#   tags: ["mac__remaining", "no_ci"]
+# Remaining setup.
+- import_playbook: mac--remaining.yml
+  tags: ["mac__remaining", "no_ci"]
 
-# # Setup that really must be run last.
-# - import_playbook: mac--last.yml
-#   tags: ["mac__last", "always"]
+# Setup that really must be run last.
+- import_playbook: mac--last.yml
+  tags: ["mac__last", "always"]
