--- a/custom/mac.yml
+++ b/custom/mac.yml
@@ -10,7 +10,7 @@
 - import_playbook: mac--day-to-day.yml
   tags: "mac__day_to_day"
 
-Essential dev.
+# Essential dev.
 - import_playbook: mac--dev.yml
   tags: "mac__dev"
 
